--- a/req-cuti.html
+++ b/req-cuti.html
@@ -1,182 +1,50 @@
-<!DOCTYPE html>
-<html lang="id">
-<head>
-  <meta charset="UTF-8">
-  <title>INPUT NIK SEBELUM REQUEST</title>
-  <style>
-    body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      margin: 0;
-      height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      background: linear-gradient(135deg, #6dd5ed, #2193b0);
-    }
-
-    .container {
-      background: #fff;
-      padding: 40px 50px;
-      border-radius: 15px;
-      box-shadow: 0 8px 20px rgba(0,0,0,0.2);
-      text-align: center;
-      width: 420px;
-      max-width: 95%;
-      animation: fadeIn 0.6s ease-in-out;
-    }
-
-    .logo {
-      width: 100px;
-      margin-bottom: 15px;
-    }
-
-    h2 {
-      margin-bottom: 25px;
-      font-size: 22px;
-      font-weight: bold;
-      background: linear-gradient(90deg, #2193b0, #6dd5ed);
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-    }
-
-    label {
-      display: block;
-      margin-bottom: 8px;
-      text-align: left;
-      font-weight: bold;
-      color: #444;
-    }
-
-    input {
-      width: 100%;
-      padding: 12px;
-      border: 1px solid #ccc;
-      border-radius: 8px;
-      font-size: 16px;
-      margin-bottom: 20px;
-      box-sizing: border-box;
-      transition: border 0.3s;
-    }
-
-    input:focus {
-      border-color: #2193b0;
-      outline: none;
-      box-shadow: 0 0 5px rgba(33, 147, 176, 0.5);
-    }
-
-    button {
-      width: 100%;
-      padding: 12px;
-      margin-top: 10px;
-      font-size: 16px;
-      font-weight: bold;
-      border: none;
-      border-radius: 8px;
-      cursor: pointer;
-      transition: all 0.3s;
-    }
-
-    .btn-cek {
-      background: #2193b0;
-      color: #fff;
-    }
-
-    .btn-cek:hover {
-      background: #18657a;
-    }
-
-    .btn-form {
-      background: #28a745;
-      color: #fff;
-      display: none;
-    }
-
-    .btn-form:hover {
-      background: #1e7e34;
-    }
-
-    #hasil {
-      margin-top: 20px;
-      font-weight: bold;
-      color: #333;
-      min-height: 30px;
-    }
-
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(-20px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
-  </style>
-</head>
-<body>
-
-  <div class="container">
-    <!-- Kalau ada logo, ganti src="LOGO.png" -->
-    <!-- <img src="LOGO.png" alt="Logo" class="logo"> -->
-
-    <h2>INPUT NIK SEBELUM REQUEST</h2>
-
-    <label for="nik">Masukkan NIK:</label>
-    <input type="text" id="nik" placeholder="Contoh: 2012022847" />
-
-    <button class="btn-cek" onclick="cekNIK()">🔍 Cek Nama & Group</button>
-
-    <div id="hasil"></div>
-
-    <button id="formCutiBtn" class="btn-form" onclick="lanjutForm()">➡️ Lanjut ke Form REQUEST</button>
-  </div>
-
 <script>
 async function cekNIK() {
-  const nik = document.getElementById("nik").value.trim();
-  const hasil = document.getElementById("hasil");
-  const btnForm = document.getElementById("formCutiBtn");
+  const nik = document.getElementById("nik").value.trim();
+  const hasil = document.getElementById("hasil");
+  const btnForm = document.getElementById("formCutiBtn");
 
-  if (!nik) {
-    hasil.innerText = "⚠️ Silakan masukkan NIK.";
-    btnForm.style.display = "none";
-    return;
-  }
+  if (!nik) {
+    hasil.innerText = "⚠️ Silakan masukkan NIK.";
+    btnForm.style.display = "none";
+    return;
+  }
 
-  hasil.innerText = "🔄 Mencari data...";
-  btnForm.style.display = "none";
+  hasil.innerText = "🔄 Mencari data...";
+  btnForm.style.display = "none";
 
-  try {
-    const response = await fetch(`https://script.google.com/macros/s/AKfycbz2Vcne0S9qUcVGCNan2ChqwcPdcqKbHVh3RdnCdK5e-UktyDu-uxVO_5uGccRQtctU/exec?nik=${nik}`);
-    const data = await response.json();
+  try {
+    // Pastikan URL Google Apps Script Anda benar-benar berfungsi dan di-deploy!
+    const response = await fetch(`https://script.google.com/macros/s/AKfycbz2Vcne0S9qUcVGCNan2ChqwcPdcqKbHVh3RdnCdK5e-UktyDu-uxVO_5uGccRQtctU/exec?nik=${nik}`);
+    const data = await response.json();
 
-    if (data.nama && data.group) {
-      hasil.innerHTML = `
-        ✅ Nama: <strong>${data.nama}</strong><br>
-        📌 Group: <strong>${data.group}</strong>
-      `;
-      btnForm.style.display = "block";
-      btnForm.dataset.nama = data.nama;
-      btnForm.dataset.nik = nik;
-      btnForm.dataset.group = data.group;
-    } else {
-      hasil.innerText = "❌ NIK tidak ditemukan di database.";
-    }
-  } catch (err) {
-    hasil.innerText = "❌ Gagal mengambil data.";
-    console.error(err);
-  }
+    if (data.nama && data.group) {
+      hasil.innerHTML = `
+        ✅ Nama: <strong>${data.nama}</strong><br>
+        📌 Group: <strong>${data.group}</strong>
+      `;
+      btnForm.style.display = "block";
+      btnForm.dataset.nama = data.nama;
+      btnForm.dataset.nik = nik;
+      btnForm.dataset.group = data.group;
+    } else {
+      hasil.innerText = "❌ NIK tidak ditemukan di database.";
+    }
+  } catch (err) {
+    hasil.innerText = "❌ Gagal mengambil data. (Cek log konsol)";
+    console.error("Error Fetching Data:", err);
+  }
 }
 
 function lanjutForm() {
-  const btn = document.getElementById("formCutiBtn");
-  const nama = encodeURIComponent(btn.dataset.nama);
-  const nik = encodeURIComponent(btn.dataset.nik);
-  const group = encodeURIComponent(btn.dataset.group);
+  const btn = document.getElementById("formCutiBtn");
+  const nama = encodeURIComponent(btn.dataset.nama);
+  const nik = encodeURIComponent(btn.dataset.nik);
+  const group = encodeURIComponent(btn.dataset.group);
 
-  // Ganti tujuan ke form-request.html dan tambahkan data sebagai query string
-  const formURL = `form-request.html?nik=${nik}&nama=${nama}&group=${group}`;
+  // Menghubungkan ke form-request.html dengan Query String
+  const formURL = `form-request.html?nik=${nik}&nama=${nama}&group=${group}`;
 
-  window.location.href = formURL;
-};
-}
+  window.location.href = formURL;
+} // <-- Perhatikan: Hanya satu kurung kurawal penutup untuk fungsi lanjutForm
 </script>
-
-</body>
-</html>
-
