--- a/req-cuti.html
+++ b/req-cuti.html
@@ -1,70 +1,155 @@
-<script>
-async function cekNIK() {
-    const nik = document.getElementById("nik").value.trim();
-    const hasil = document.getElementById("hasil");
-    const btnForm = document.getElementById("formCutiBtn");
+<!DOCTYPE html>
+<html lang="id">
+<head>
+  <meta charset="UTF-8">
+  <title>INPUT NIK SEBELUM REQUEST</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: linear-gradient(135deg, #4facfe, #00f2fe);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      margin: 0;
+    }
+    .container {
+      background: #fff;
+      padding: 40px;
+      border-radius: 15px;
+      box-shadow: 0 8px 20px rgba(0,0,0,0.2);
+      width: 400px;
+      text-align: center;
+    }
+    .logo {
+      width: 100px;
+      margin-bottom: 15px;
+    }
+    h2 {
+      margin: 10px 0 20px;
+      color: #333;
+    }
+    label {
+      display: block;
+      margin: 15px 0 5px;
+      font-weight: bold;
+      text-align: left;
+    }
+    input {
+      width: 100%;
+      padding: 12px;
+      border-radius: 8px;
+      border: 1px solid #ccc;
+      box-sizing: border-box;
+      font-size: 14px;
+    }
+    button {
+      margin-top: 20px;
+      padding: 12px;
+      width: 100%;
+      background-color: #0097a7;
+      color: white;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      font-size: 16px;
+      font-weight: bold;
+      transition: background 0.3s ease;
+    }
+    button:hover {
+      background-color: #00796b;
+    }
+    #hasil {
+      margin-top: 20px;
+      font-weight: bold;
+      color: #333;
+    }
+    #formCutiBtn {
+      display: none;
+      background-color: #4caf50;
+    }
+    #formCutiBtn:hover {
+      background-color: #388e3c;
+    }
+  </style>
+</head>
+<body>
 
-    // 1. Validasi Input
-    if (!nik) {
+  <div class="container">
+    <!-- 🔹 Logo -->
+    <img src="https://raw.githubusercontent.com/username/repo/main/Logo.jpg" alt="Logo EDP" class="logo">
+
+    <!-- 🔹 Judul -->
+    <h2>INPUT NIK SEBELUM REQUEST</h2>
+
+    <!-- 🔹 Input NIK -->
+    <label for="nik">Masukkan NIK:</label>
+    <input type="text" id="nik" placeholder="Contoh: 2012022847">
+
+    <!-- 🔹 Tombol cek -->
+    <button onclick="cekNIK()">🔍 Cek Nama & Group</button>
+
+    <!-- 🔹 Hasil -->
+    <div id="hasil"></div>
+
+    <!-- 🔹 Tombol lanjut -->
+    <button id="formCutiBtn" onclick="lanjutForm()">➡️ Lanjut ke Form REQUEST</button>
+  </div>
+
+  <script>
+    async function cekNIK() {
+      const nik = document.getElementById("nik").value.trim();
+      const hasil = document.getElementById("hasil");
+      const btnForm = document.getElementById("formCutiBtn");
+
+      if (!nik) {
         hasil.innerText = "⚠️ Silakan masukkan NIK.";
         btnForm.style.display = "none";
         return;
-    }
+      }
 
-    hasil.innerText = "🔄 Mencari data...";
-    btnForm.style.display = "none";
+      hasil.innerText = "🔄 Mencari data...";
+      btnForm.style.display = "none";
 
-    const gasUrl = `https://script.google.com/macros/s/AKfycbz2Vcne0S9qUcVGCNan2ChqwcPdcqKbHVh3RdnCdK5e-UktyDu-uxVO_5uGccRQtctU/exec?nik=${nik}`;
-
-    try {
-        const response = await fetch(gasUrl);
-
-        // 2. Penanganan Error HTTP (misalnya 404, 500)
-        if (!response.ok) {
-            throw new Error(`Kesalahan Jaringan: Status ${response.status}`);
-        }
-
+      try {
+        const response = await fetch(
+          `https://script.google.com/macros/s/AKfycbz2Vcne0S9qUcVGCNan2ChqwcPdcqKbHVh3RdnCdK5e-UktyDu-uxVO_5uGccRQtctU/exec?nik=${nik}`
+        );
         const data = await response.json();
 
-        // 3. Memeriksa Data yang Diterima
-        if (data && data.nama && data.group) {
-            hasil.innerHTML = `
-                ✅ Nama: <strong>${data.nama}</strong><br>
-                📌 Group: <strong>${data.group}</strong>
-            `;
-            btnForm.style.display = "block";
-            // Menyimpan data untuk fungsi lanjutForm
-            btnForm.dataset.nama = data.nama;
-            btnForm.dataset.nik = nik;
-            btnForm.dataset.group = data.group;
+        if (data.nama && data.group) {
+          hasil.innerHTML = `
+            ✅ Nama: <strong>${data.nama}</strong><br>
+            📌 Group: <strong>${data.group}</strong>
+          `;
+          btnForm.style.display = "block";
+          btnForm.dataset.nama = data.nama;
+          btnForm.dataset.nik = nik;
+          btnForm.dataset.group = data.group;
         } else {
-            // Jika Apps Script mengembalikan JSON tapi data.nama/data.group kosong
-            hasil.innerText = "❌ NIK tidak ditemukan di database.";
+          hasil.innerText = "❌ NIK tidak ditemukan di database.";
         }
-    } catch (err) {
-        // Penanganan Error Jaringan atau JSON Parsing
-        hasil.innerText = "❌ Gagal mengambil data. Cek URL Web App/Koneksi.";
-        console.error("Kesalahan saat fetch data:", err);
-    }
-}
-
-function lanjutForm() {
-    const btn = document.getElementById("formCutiBtn");
-    
-    // Pastikan data sudah tersimpan di dataset sebelum digunakan
-    if (!btn.dataset.nama || !btn.dataset.nik || !btn.dataset.group) {
-        alert("Data NIK belum terverifikasi. Mohon Cek NIK terlebih dahulu.");
-        return;
+      } catch (err) {
+        hasil.innerText = "❌ Gagal mengambil data.";
+        console.error(err);
+      }
     }
 
-    const nama = encodeURIComponent(btn.dataset.nama);
-    const nik = encodeURIComponent(btn.dataset.nik);
-    const group = encodeURIComponent(btn.dataset.group);
+    function lanjutForm() {
+      const btn = document.getElementById("formCutiBtn");
+      const nama = encodeURIComponent(btn.dataset.nama);
+      const nik = encodeURIComponent(btn.dataset.nik);
+      const group = encodeURIComponent(btn.dataset.group);
 
-    // Menghubungkan ke form-request.html dengan Query String
-    // Pastikan file form-request.html berada di folder yang sama atau diakses dengan path yang benar
-    const formURL = `form-request.html?nik=${nik}&nama=${nama}&group=${group}`;
+      // Link Google Form kamu
+      const formURL = "https://docs.google.com/forms/d/e/1FAIpQLSeoJsdvN7htQSgUjDbT6I5StR1y0zLyFXM46-ZuLvO80D89bQ/viewform";
 
-    window.location.href = formURL;
-}
-</script>
+      // Prefill entry id masing-masing
+      const prefillURL = `${formURL}?entry.448590851=${nik}&entry.1346383944=${nama}&entry.1841657487=${group}`;
+
+      window.location.href = prefillURL;
+    }
+  </script>
+
+</body>
+</html>
