--- a/req-cuti.html
+++ b/req-cuti.html
@@ -21,12 +21,8 @@
       width: 400px;
       text-align: center;
     }
-    .logo {
-      width: 100px;
-      margin-bottom: 15px;
-    }
     h2 {
-      margin: 10px 0 20px;
+      margin: 0 0 20px;
       color: #333;
     }
     label {
@@ -76,9 +72,6 @@
 <body>
 
   <div class="container">
-    <!-- 🔹 Logo -->
-    <img src="https://raw.githubusercontent.com/username/repo/main/Logo.jpg" alt="Logo EDP" class="logo">
-
     <!-- 🔹 Judul -->
     <h2>INPUT NIK SEBELUM REQUEST</h2>
 
