--- a/req-cuti.html
+++ b/req-cuti.html
@@ -6,87 +6,87 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      background: linear-gradient(135deg, #4facfe, #00f2fe);
+      background: linear-gradient(135deg, #2193b0, #6dd5ed);
+      margin: 0;
+      padding: 0;
       display: flex;
       justify-content: center;
       align-items: center;
       height: 100vh;
-      margin: 0;
     }
     .container {
       background: #fff;
-      padding: 40px;
-      border-radius: 15px;
-      box-shadow: 0 8px 20px rgba(0,0,0,0.2);
-      width: 400px;
+      padding: 30px;
+      border-radius: 12px;
+      box-shadow: 0 8px 18px rgba(0,0,0,0.15);
+      width: 100%;
+      max-width: 420px;
       text-align: center;
     }
     h2 {
-      margin: 0 0 20px;
-      color: #333;
+      background: linear-gradient(90deg, #2193b0, #6dd5ed);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      font-weight: bold;
+      margin-bottom: 20px;
     }
     label {
       display: block;
-      margin: 15px 0 5px;
+      margin-top: 15px;
       font-weight: bold;
+      color: #333;
       text-align: left;
     }
     input {
       width: 100%;
       padding: 12px;
-      border-radius: 8px;
+      margin-top: 8px;
       border: 1px solid #ccc;
-      box-sizing: border-box;
+      border-radius: 8px;
       font-size: 14px;
     }
     button {
       margin-top: 20px;
-      padding: 12px;
-      width: 100%;
-      background-color: #0097a7;
-      color: white;
+      padding: 12px 18px;
       border: none;
       border-radius: 8px;
-      cursor: pointer;
-      font-size: 16px;
+      background: #2193b0;
+      color: #fff;
       font-weight: bold;
-      transition: background 0.3s ease;
+      cursor: pointer;
+      transition: background 0.3s;
+      width: 100%;
     }
     button:hover {
-      background-color: #00796b;
+      background: #176d7a;
     }
     #hasil {
       margin-top: 20px;
       font-weight: bold;
-      color: #333;
+      color: #444;
     }
     #formCutiBtn {
       display: none;
-      background-color: #4caf50;
+      background: #28a745;
     }
     #formCutiBtn:hover {
-      background-color: #388e3c;
+      background: #1e7e34;
     }
   </style>
 </head>
 <body>
 
   <div class="container">
-    <!-- 🔹 Judul -->
     <h2>INPUT NIK SEBELUM REQUEST</h2>
 
-    <!-- 🔹 Input NIK -->
     <label for="nik">Masukkan NIK:</label>
-    <input type="text" id="nik" placeholder="Contoh: 2012022847">
+    <input type="text" id="nik" placeholder="Contoh: 2012022847" />
 
-    <!-- 🔹 Tombol cek -->
-    <button onclick="cekNIK()">🔍 Cek Nama & Group</button>
+    <button onclick="cekNIK()">Cek Nama & Group</button>
 
-    <!-- 🔹 Hasil -->
     <div id="hasil"></div>
 
-    <!-- 🔹 Tombol lanjut -->
-    <button id="formCutiBtn" onclick="lanjutForm()">➡️ Lanjut ke Form REQUEST</button>
+    <button id="formCutiBtn" onclick="lanjutForm()">Lanjut ke Form REQUEST</button>
   </div>
 
   <script>
@@ -105,9 +105,7 @@
       btnForm.style.display = "none";
 
       try {
-        const response = await fetch(
-          `https://script.google.com/macros/s/AKfycbz2Vcne0S9qUcVGCNan2ChqwcPdcqKbHVh3RdnCdK5e-UktyDu-uxVO_5uGccRQtctU/exec?nik=${nik}`
-        );
+        const response = await fetch(`https://script.google.com/macros/s/AKfycbz2Vcne0S9qUcVGCNan2ChqwcPdcqKbHVh3RdnCdK5e-UktyDu-uxVO_5uGccRQtctU/exec?nik=${nik}`);
         const data = await response.json();
 
         if (data.nama && data.group) {
@@ -115,7 +113,7 @@
             ✅ Nama: <strong>${data.nama}</strong><br>
             📌 Group: <strong>${data.group}</strong>
           `;
-          btnForm.style.display = "block";
+          btnForm.style.display = "inline-block";
           btnForm.dataset.nama = data.nama;
           btnForm.dataset.nik = nik;
           btnForm.dataset.group = data.group;
@@ -134,13 +132,10 @@
       const nik = encodeURIComponent(btn.dataset.nik);
       const group = encodeURIComponent(btn.dataset.group);
 
-      // Link Google Form kamu
-      const formURL = "https://docs.google.com/forms/d/e/1FAIpQLSeoJsdvN7htQSgUjDbT6I5StR1y0zLyFXM46-ZuLvO80D89bQ/viewform";
-
-      // Prefill entry id masing-masing
-      const prefillURL = `${formURL}?entry.448590851=${nik}&entry.1346383944=${nama}&entry.1841657487=${group}`;
-
-      window.location.href = prefillURL;
+      // Redirect ke form-request.html dengan parameter
+      const formURL = "form-request.html";
+      const nextPageURL = `${formURL}?nik=${nik}&nama=${nama}&group=${group}`;
+      window.location.href = nextPageURL;
     }
   </script>
 
