--- a/form-request.html
+++ b/form-request.html
@@ -17,7 +17,6 @@ body {
   background: linear-gradient(135deg, #74ebd5, #ACB6E5);
   padding: 20px;
 }
-
 .container {
   background: #fff;
   padding: 35px 30px 40px;
@@ -28,7 +27,6 @@ body {
   animation: fadeIn 0.6s ease-in-out;
   position: relative;
 }
-
 .container::before {
   content: "";
   position: absolute;
@@ -40,7 +38,6 @@ body {
   transform: rotate(25deg);
   pointer-events: none;
 }
-
 h2 {
   text-align: center;
   margin-bottom: 25px;
@@ -50,12 +47,7 @@ h2 {
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   letter-spacing: 1px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 8px;
 }
-
 label {
   display: block;
   margin-bottom: 6px;
@@ -63,7 +55,6 @@ label {
   font-weight: 600;
   color: #444;
 }
-
 input, select {
   width: 100%;
   padding: 12px 14px;
@@ -75,19 +66,16 @@ input, select {
   transition: all 0.3s ease;
   background-color: #fdfdfd;
 }
-
 input:focus, select:focus {
   border-color: #4e54c8;
   box-shadow: 0 0 8px rgba(78,84,200,0.3);
   background-color: #fff;
   outline: none;
 }
-
 input[readonly] {
   background-color: #f3f3f3;
   color: #555;
 }
-
 button[type="submit"] {
   width: 100%;
   padding: 14px;
@@ -102,12 +90,10 @@ button[type="submit"] {
   color: #fff;
   box-shadow: 0 6px 15px rgba(17,153,142,0.35);
 }
-
 button[type="submit"]:hover {
   transform: translateY(-2px);
   box-shadow: 0 10px 20px rgba(17,153,142,0.45);
 }
-
 #status {
   margin-top: 18px;
   text-align: center;
@@ -117,10 +103,8 @@ button[type="submit"]:hover {
   padding: 6px;
   border-radius: 8px;
 }
-
 .success { color: #155724; background: #d4edda; border: 1px solid #c3e6cb; }
 .error   { color: #721c24; background: #f8d7da; border: 1px solid #f5c6cb; }
-
 #footer {
   font-size: 11px;
   color: #666;
@@ -128,10 +112,16 @@ button[type="submit"]:hover {
   margin-top: 20px;
   line-height: 1.4;
 }
-
 @keyframes fadeIn {
   from { opacity: 0; transform: translateY(-15px); }
   to { opacity: 1; transform: translateY(0); }
+}
+/* Tambahan style untuk tanggal penuh */
+.air-datepicker-cell.full-quota-day {
+  background: #f44336 !important;
+  color: #fff !important;
+  opacity: 0.7;
+  pointer-events: none;
 }
 </style>
 </head>
@@ -139,26 +129,19 @@ button[type="submit"]:hover {
 
 <div class="container">
   <h2 id="header-text">REQUEST LIBUR / CUTI JADWAL BULAN DEPAN</h2>
-
   <form id="requestForm">
     <label>NIK</label>
     <input type="text" id="nik" name="nik" readonly>
-
     <label>Nama</label>
     <input type="text" id="nama" name="nama" readonly>
-
     <label>Group</label>
     <input type="text" id="group" name="group" readonly>
-
     <label>Request Libur (Klik kotak input)</label>
     <input type="text" id="libur" name="libur" placeholder="Pilih tanggal libur" readonly>
-
     <label>Request Cuti (Klik kotak input)</label>
     <input type="text" id="cuti" name="cuti" placeholder="Pilih tanggal cuti" readonly>
-
     <label>Request Lainnya</label>
-    <input type="text" id="requestLainnya" name="requestLainnya" placeholder="Jawaban singkat, maks 80 karakter" maxlength="80">
-
+    <input type="text" id="requestLainnya" name="requestLainnya" maxlength="80">
     <label>Ekstrakulikuler yang diikuti</label>
     <select id="ekstrakulikuler" name="ekstrakulikuler" required>
       <option value="">-- Pilih --</option>
@@ -167,10 +150,8 @@ button[type="submit"]:hover {
       <option value="FUTSAL & BADMINTON">FUTSAL & BADMINTON</option>
       <option value="TIDAK MENGIKUTI">TIDAK MENGIKUTI</option>
     </select>
-
     <button type="submit">KIRIM REQUEST</button>
     <div id="status"></div>
-
     <div id="footer">
       Silakan Request Jadwal sesuai keperluan saja.<br>
       Inputan bisa direvisi / diganti berulang kali. Gunakan dengan bijak! 🚀
@@ -180,76 +161,80 @@ button[type="submit"]:hover {
 
 <script src="https://cdn.jsdelivr.net/npm/air-datepicker@3.5.0/air-datepicker.min.js"></script>
 <script>
-/* === KONFIGURASI SCRIPT === */
+/* === KONFIGURASI === */
 const scriptURL = "https://script.google.com/macros/s/AKfycbzR5rqC-ll3MheqTzwP9CGchyfkOWM04qdUt7h565ty9J7gd4hSfH7ui2pwItInxCUPBQ/exec";
 const quotaURL = scriptURL;
-const MAX_KUOTA_HARIAN = 21; // ✅ revisi: kuota maksimal per hari
+const MAX_KUOTA_HARIAN = 21;
 
-let datepickerLibur = null;
-let datepickerCuti = null;
+let datepickerLibur, datepickerCuti;
+let fullDaysList = [];
 
 const monthNames = ["Januari","Februari","Maret","April","Mei","Juni",
                     "Juli","Agustus","September","Oktober","November","Desember"];
 
+/* Update header sesuai bulan depan */
 (function updateHeader() {
   const today = new Date();
-  const nextMonth = new Date(today.getFullYear(), today.getMonth() + 1, 1);
+  const nextMonth = new Date(today.getFullYear(), today.getMonth()+1, 1);
   const nextMonthName = monthNames[nextMonth.getMonth()];
   const headerText = `REQUEST LIBUR / CUTI BULAN ${nextMonthName.toUpperCase()}`;
   document.getElementById('header-text').textContent = headerText;
   document.getElementById('page-title').textContent = headerText;
 })();
 
+/* Prefill NIK, Nama, Group */
 const params = new URLSearchParams(window.location.search);
 document.getElementById("nik").value = params.get("nik") || "";
 document.getElementById("nama").value = params.get("nama") || "";
 document.getElementById("group").value = params.get("group") || "";
 
-let fullDaysList = [];
-
+/* Ambil daftar tanggal penuh */
 async function fetchFullDays() {
   try {
-    const response = await fetch(quotaURL);
-    if (!response.ok) throw new Error(`HTTP error: ${response.status}`);
-    return await response.json();
+    const res = await fetch(quotaURL);
+    return await res.json(); // hasil array ex: ["3","7","15"]
   } catch(e) {
-    console.error("Gagal mengambil kuota:", e);
+    console.error("Gagal ambil kuota:", e);
     return [];
   }
 }
 
+/* Inisialisasi Datepicker dengan disable otomatis */
 function initDatepicker(selector, disabledDays) {
   const today = new Date();
-  const nextMonth = new Date(today.getFullYear(), today.getMonth() + 1, 1);
-  const disabledDates = disabledDays.map(day => new Date(nextMonth.getFullYear(), nextMonth.getMonth(), parseInt(day)));
-
-  if (document.querySelector(selector).datepicker) document.querySelector(selector).datepicker.destroy();
+  const nextMonth = new Date(today.getFullYear(), today.getMonth()+1, 1);
 
   const dp = new AirDatepicker(selector, {
     multipleDates: true,
     multipleDatesSeparator: ', ',
-    dateFormat: 'd-MM', // tampilkan 1-11, 2-11
-    disabledDates: disabledDates,
+    dateFormat: 'd-MM',
+    onRenderCell({date, cellType}) {
+      if (cellType === 'day') {
+        const day = date.getDate().toString();
+        if (disabledDays.includes(day)) {
+          return {
+            disabled: true,
+            classes: 'full-quota-day'
+          }
+        }
+      }
+    },
     locale: {
       days: ['Minggu','Senin','Selasa','Rabu','Kamis','Jumat','Sabtu'],
       daysShort: ['Min','Sen','Sel','Rab','Kam','Jum','Sab'],
       daysMin: ['Mg','Sn','Sl','Rb','Km','Jm','Sb'],
       months: monthNames,
-      monthsShort: monthNames.map(m => m.substring(0, 3)),
+      monthsShort: monthNames.map(m => m.substr(0,3)),
       today: 'Hari Ini',
-      clear: 'Bersihkan',
-      dateFormat: 'dd/MM/yyyy',
-      firstDay: 0
+      clear: 'Bersihkan'
     },
     startDate: nextMonth,
     minDate: nextMonth,
-    maxDate: new Date(nextMonth.getFullYear(), nextMonth.getMonth() + 1, 0),
-    position: 'bottom left',
-    readOnly: true
+    maxDate: new Date(nextMonth.getFullYear(), nextMonth.getMonth()+1, 0)
   });
 
   if (selector === '#libur') datepickerLibur = dp;
-  else if (selector === '#cuti') datepickerCuti = dp;
+  if (selector === '#cuti') datepickerCuti = dp;
 }
 
 async function initializeApp() {
@@ -259,40 +244,34 @@ async function initializeApp() {
 }
 initializeApp();
 
+/* Submit form */
 document.getElementById("requestForm").addEventListener("submit", function(e){
   e.preventDefault();
   const status = document.getElementById("status");
   status.textContent = "⏳ Mengirim data...";
   status.className = "";
 
-  const formData = new FormData();
-  formData.append('nik', document.getElementById("nik").value);
-  formData.append('nama', document.getElementById("nama").value);
-  formData.append('group', document.getElementById("group").value);
-  formData.append('requestLainnya', document.getElementById("requestLainnya").value);
-  formData.append('ekstrakulikuler', document.getElementById("ekstrakulikuler").value);
-  formData.append('libur', document.getElementById("libur").value || "");
-  formData.append('cuti', document.getElementById("cuti").value || "");
+  const formData = new FormData(e.target);
 
   fetch(scriptURL, { method: "POST", body: formData })
-    .then(res=>res.text())
-    .then(resText=>{
-      if (resText.includes("Gagal: Kuota untuk tanggal") && resText.includes("sudah penuh")) {
-        const match = resText.match(/tanggal\s+([\d-]+)\s+sudah/);
+    .then(r=>r.text())
+    .then(text=>{
+      if (text.includes("Gagal: Kuota untuk tanggal")) {
+        const match = text.match(/tanggal\s+([\d-]+)/);
         const blockedDay = match ? match[1] : "xx";
         status.textContent = `❌ Kuota penuh tanggal ${blockedDay} (maks ${MAX_KUOTA_HARIAN}).`;
         status.className = "error";
-      } else if(resText.trim().startsWith("Sukses")) {
-        status.textContent = "✅ "+resText.trim();
+      } else if (text.trim().startsWith("Sukses")) {
+        status.textContent = "✅ "+text.trim();
         status.className = "success";
         setTimeout(initializeApp, 500);
       } else {
-        status.textContent = "❌ "+(resText.includes("Gagal") ? resText : "Gagal mengirim data!");
+        status.textContent = "❌ "+text;
         status.className = "error";
       }
     })
     .catch(()=>{
-      status.textContent = "❌ Gagal mengirim data! Cek koneksi atau URL Web App";
+      status.textContent = "❌ Gagal mengirim data!";
       status.className = "error";
     });
 });
